Fixing UI alignment issue in Custom Questions

--- a/src/pages/question-templates-page/QuestionTemplatesPage.css
+++ b/src/pages/question-templates-page/QuestionTemplatesPage.css
@@ -153,8 +153,8 @@ li[qstntemplate='true'] .qti-itemBody>blockquote:first-child>div.optionLabelView
 	margin-right: 10px;
 }
 .qti-assessmentItem{
-	margin-left: -11px;
-	margin-right: -11px;
+	margin-left: -5px;
+	margin-right: -18px;
 	margin-bottom: 3px;
 }
 
